--- a/idf_project/main/CMakeLists.txt
+++ b/idf_project/main/CMakeLists.txt
@@ -1,3 +1,4 @@
 idf_component_register(SRCS "main.cpp"
                     INCLUDE_DIRS "."
+                    REQUIRES LedDriver
                     )
