--- a/idf_project/components/PatternTable/CMakeLists.txt
+++ b/idf_project/components/PatternTable/CMakeLists.txt
@@ -1,8 +1,8 @@
 idf_component_register(SRCS 
-                            "src/player.c"
+                            "src/player_content.c"
                             "src/pattern_table.c"
                             "src/sdcard.c"
-                            "src/state_changer.c"
+                            "src/player.c"
                             "src/testing.c"
                     INCLUDE_DIRS "inc"
                     REQUIRES fatfs driver esp_timer)
