--- a/idf_project/components/PatternTable/CMakeLists.txt
+++ b/idf_project/components/PatternTable/CMakeLists.txt
@@ -5,4 +5,4 @@ idf_component_register(SRCS
                             "src/player.c"
                             "src/testing.c"
                     INCLUDE_DIRS "inc"
-                    REQUIRES fatfs driver esp_timer)
+                    REQUIRES fatfs driver esp_timer LedDriver)
